--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1567,10 +1567,8 @@ div#rp_nav {
 }
 .lotterydetail .select_num_col .all_num_part {
   border-radius: 0;
-  border-left: 1px solid rgba(255, 255, 255, 0.5);
-  border-right: 1px solid rgba(255, 255, 255, 0.5);
-  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
-  padding: 15px;
+  border-bottom: 1px solid #e1dfdf;
+  padding: 10px;
 }
 
 .lotterydetail .lt_numbers_wrapper {
@@ -1578,8 +1576,8 @@ div#rp_nav {
   z-index: 6;
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  column-gap: 10px;
-  row-gap: 10px;
+  column-gap: 5px;
+  row-gap: 5px;
 }
 
 .lotterydetail .lt_numbers_wrapper span {
@@ -1597,19 +1595,24 @@ div#rp_nav {
   width: 100% !important;
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  column-gap: 10px;
-  row-gap: 10px;
+  column-gap: 5px;
+  row-gap: 5px;
   padding: 0;
+}
+.select_num_part {
+  width: 100%;
+  float: left;
+  padding: 10px 20px;
+  margin-top: 5px;
+  box-sizing: border-box;
+  background-color: #fff;
+  border-top: 1px solid #e1dfdf;
 }
 .lotterydetail .select_num_col .select_num_part {
   margin-top: 0;
   border-top: none;
-  padding-top: 0;
-  border-left: 1px solid rgba(255, 255, 255, 0.5);
-  border-right: 1px solid rgba(255, 255, 255, 0.5);
-  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
   border-radius: 0 0 8px 8px;
-  padding: 15px;
+  padding: 10px;
 }
 .lotterydetail .cardlist .select_num_part_wrapper span {
   margin: 0 auto;
@@ -4279,7 +4282,7 @@ input[type="radio"].css-checkbox + label.css-label.chk {
   width: 100%;
 }
 .select_num_col {
-  width: 100%;
+  width: 20%;
   padding: 5px 5px;
 }
 .select_num_col_part {
@@ -4303,7 +4306,6 @@ input[type="radio"].css-checkbox + label.css-label.chk {
   -webkit-box-shadow: 0px 0px 10px 0px rgba(50, 50, 50, 0.5);
   -moz-box-shadow: 0px 0px 10px 0px rgba(50, 50, 50, 0.5);
   box-shadow: 0px 0px 10px 0px rgba(50, 50, 50, 0.5);
-  border: 0 none !important;
   height: 100%;
 }
 .select_num_col:hover .select_num_col_part-blue {
@@ -4600,6 +4602,12 @@ input[type="radio"].css-checkbox + label.css-label.chk {
   width: 100%;
   height: 50px;
 }
+.lotterydetail .select_num_col .quickpic {
+  border-radius: 8px 8px 0 0;
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+}
 .quickpic_text {
   cursor: pointer;
   width: 60%;
@@ -4612,6 +4620,10 @@ input[type="radio"].css-checkbox + label.css-label.chk {
   margin-top: 5px; /*color: #fff;*/
   color: #0169b2;
 }
+.lotterydetail .select_num_col .quickpic > * {
+  margin-top: 0;
+  margin-bottom: 0;
+}
 .quickpic_delete {
   width: 25px;
   height: 25px;
@@ -4622,14 +4634,7 @@ input[type="radio"].css-checkbox + label.css-label.chk {
   float: right;
   margin: 10px;
 }
-.select_num_col_part:hover .quickpic {
-  display: block;
-  top: 0;
-}
-.select_num_col_part:hover .quickpic-mobile {
-  display: block;
-  top: 0;
-}
+
 .hide {
   display: none !important;
 }
@@ -7525,9 +7530,6 @@ input.css-checkbox[type="radio"] + label.css-label.clr {
     padding: 0;
     background: rgb(219, 224, 238);
   }
-  .lt_numbers_wrapper span {
-    border: none;
-  }
   .expanded .lt_numbers_wrapper span {
     border: 1px solid #e3e1e1;
   }
@@ -7582,10 +7584,6 @@ input.css-checkbox[type="radio"] + label.css-label.clr {
   }
   .quickpic_close {
     background-color: rgb(29, 50, 101);
-  }
-  .cardlist {
-    max-height: 300px;
-    margin-top: -95px;
   }
   .paymentnotloggedinmain.wrap {
     margin-top: 70px;
@@ -8361,6 +8359,11 @@ input.css-checkbox[type="radio"] + label.css-label.clr {
     width: 100%;
   }
 }
+@media screen and (max-width: 1180px) {
+  .select_num_col {
+    width: 100%;
+  }
+}
 @media screen and (max-width: 320px) {
   .ttl_share_lab {
     width: 180px;
@@ -8736,8 +8739,8 @@ footer .copyright p a {
   width: 20% !important;
 }
 .pick_num_title {
-  font-size: 11px;
-  margin: 12px 0px 0px 12px;
+  font-size: 16px;
+  margin: 0 auto 0 0;
   float: left;
   color: #0169b2;
 }
@@ -8751,16 +8754,21 @@ a.remodal-close.error-close {
 .beton-header {
   width: 100%;
   height: 115px;
-  margin: 0 0 10px 0px;
-  padding: 0 0 0 0;
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
+  margin-top: 20px;
+  margin-bottom: 40px;
+  padding: 0 20px;
+  border-radius: 8px;
+  box-shadow: 0px 0px 1px rgb(0 0 0 / 16%), 0px 0px 6px rgb(0 0 0 / 16%),
+    0px 4px 20px rgb(0 0 0 / 26%), inset 0px 1px 0px rgb(255 255 255 / 20%);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   font-family: "Poppins", sans-serif;
-  font-size: 13px;
   color: #fff;
-  font-weight: 500;
   line-height: 13px;
+  box-sizing: border-box;
 }
+
 .beton-header-mobile-section {
   display: flex;
   flex-wrap: wrap;
@@ -8769,7 +8777,7 @@ a.remodal-close.error-close {
   justify-content: center;
   margin: auto;
 }
-.beton-header.megamillions {
+.beton-header.MegaMillions {
   background: linear-gradient(#333796, #cf8486);
 }
 .beton-header.SuperEnalotto {
@@ -8811,16 +8819,20 @@ a.remodal-close.error-close {
   width: auto;
   height: auto;
   min-height: 50px;
-  margin: 15px 0 0 0;
+  margin: 0;
   padding: 10px 20px 0 20px;
 }
+.lotterydetail .beton-header .lotto-name-container {
+  min-height: unset;
+  display: flex;
+  align-items: center;
+}
 .lotto-name-container .lotto-logo {
-  margin: -10px 5px 0 0 !important;
   width: 50px;
 }
 .lotto-name-container .lotto-name {
   font-family: "Poppins", sans-serif;
-  font-size: 40px;
+  font-size: 30px;
   color: #fff;
   font-weight: 700;
   line-height: 30px;
@@ -8834,16 +8846,16 @@ a.remodal-close.error-close {
   min-height: 50px;
   margin: 15px 0 0 0;
   padding: 0 20px 0 20px;
-  border-left: 1px solid white;
 }
 .lotto-prize-container h1.lotto-prize {
   margin: 0 0 0 0;
   padding: 0 0 0 0;
   font-family: "Poppins", sans-serif;
-  font-size: 45px;
+  font-size: 35px;
   color: #fff;
   line-height: 45px;
   font-weight: 800;
+  text-align: center;
 }
 .lotto-prize-container h1.lotto-prize .small-m {
   font-size: 30px;
@@ -8855,9 +8867,8 @@ a.remodal-close.error-close {
   height: auto;
   min-height: 50px;
   padding: 6px 20px 0 20px;
-  margin: 17px 0 0 0;
+  margin: 0;
   text-align: center;
-  border-left: 1px solid white;
 }
 .lotto-timer .timer-view {
   display: inline-block;
@@ -8901,6 +8912,13 @@ a.remodal-close.error-close {
   line-height: 12px;
   font-weight: 500;
 }
+.lotterydetail .beton-header .lotto-timer .timer-unit {
+  width: 46px;
+  text-align: center;
+  font-size: 16px;
+  margin-top: 4px;
+  text-transform: lowercase;
+}
 .lotto-timer .timer-view .drawing-in-progress {
   display: block;
   font-family: "Poppins", sans-serif;
@@ -8908,6 +8926,15 @@ a.remodal-close.error-close {
   font-weight: 600;
   line-height: 35px;
   margin: 3px 0 0 0;
+}
+.lotterydetail .beton-header .lotto-timer .timer-value {
+  border-radius: 4px;
+  width: 46px;
+  height: 44px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 28px;
 }
 .beton-header .lotto-action-container {
   display: inline-block;
@@ -10822,9 +10849,6 @@ input:focus {
     margin-bottom: 0 !important;
     padding: 0px 0 !important;
   }
-  .lotterydetail .lotto-timer {
-    display: none;
-  }
   .lotterydetail .tabin_main {
     flex-direction: column;
   }
@@ -11014,7 +11038,6 @@ div.buy-now-section-new .one-time-entry label {
 /*manager singh*/
 .space_add {
   clear: both;
-  padding: 17px 0 18px 0;
   float: left;
   border-bottom: 1px solid #e1dfdf;
   width: 100%;
@@ -11084,6 +11107,7 @@ div.buy-now-section-new {
   color: #25d414 !important;
   float: right;
   padding: 0 10px 0 0;
+  height: auto;
 }
 .tpt {
   width: 100%;
@@ -11210,7 +11234,7 @@ span.bin.oro-bonus-money {
   background: linear-gradient(to bottom, #b4e391 15%, #61c419 55%);
 }
 .oro-single-total_share_conti_btn:hover {
-  background: #0df90d;
+  background: #13d19c;
   color: white;
 }
 /* aboutus end */
@@ -11291,6 +11315,16 @@ span.bin.oro-bonus-money {
   .group-ticket-section .body-section .body-right {
     width: 100%;
     margin-right: 0;
+  }
+  .beton-header-mobile-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    border-radius: 8px;
+    margin: 0;
+    padding: 15px;
+    box-sizing: border-box;
   }
 }
 .group-single-draw-description {
