--- a/components/form/form-control.module.scss
+++ b/components/form/form-control.module.scss
@@ -65,7 +65,7 @@
       width: 5px;
       height: 5px;
       position: absolute;
-      background: #0b8;
+      background: white;
       left: 5px;
       top: 12px;
       border-radius: 100%;
