--- a/pages/auth/auth.module.scss
+++ b/pages/auth/auth.module.scss
@@ -4,82 +4,84 @@
   display: flex;
   align-items: center;
   justify-content: center;
-
-  & .form {
-    position: relative;
-    font-size: 18px;
-    font-weight: 500;
-    width: 480px;
-    background-color: white;
-    padding: 48px 8px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-
-    & .close {
-      display: block;
-      position: absolute;
-      right: 24px;
-      top: 24px;
-      width: 16px;
-      height: 16px;
-      background: url("/images/close_icon.png") no-repeat;
-    }
-
-    & .close::after {
-      clear: both;
-    }
-    & h1 {
-      font-size: 24px;
-      margin: 16px;
-      text-align: center;
-    }
-
-    & .inputGroup {
-      padding: 16px;
-
-      & > div {
-        margin-bottom: 16px;
-      }
-
-      & .flnameInput {
-        display: flex;
-        justify-content: space-between;
-
-        & > div {
-          display: inline;
-          width: 48%;
-        }
-      }
-    }
-
-    & .actionGroup {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 0 16px;
-    }
-
-    & .actionLinks {
-      display: flex;
-      justify-content: flex-end;
-      width: 100%;
-      padding: 16px;
-      margin: 8px 0;
-    }
-
-    & .tc {
-      margin-top: 16px;
-      padding: 0 16px;
-      text-align: justify;
-    }
-
-    & a:focus,
-    a:hover {
-      color: #00ac78 !important;
-      transition: ease-in-out 0.3s;
-    }
-  }
 }
 
+.form {
+  position: relative;
+  font-size: 18px;
+  font-weight: 500;
+  width: 480px;
+  background-color: white;
+  padding: 48px 8px;
+  margin: 0 auto;
+  margin-top: 115px;
+  margin-bottom: 30px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+  & .close {
+    display: block;
+    position: absolute;
+    right: 24px;
+    top: 24px;
+    width: 16px;
+    height: 16px;
+    background: url("/images/close_icon.png") no-repeat;
+  }
+
+  & .close::after {
+    clear: both;
+  }
+  & h1 {
+    font-size: 24px;
+    margin: 16px;
+    text-align: center;
+  }
+
+  & .inputGroup {
+    padding: 16px;
+
+    & > div {
+      margin-bottom: 16px;
+    }
+
+    & .flnameInput {
+      display: flex;
+      justify-content: space-between;
+
+      & > div {
+        display: inline;
+        width: 48%;
+      }
+    }
+  }
+
+  & .actionGroup {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0 16px;
+  }
+
+  & .actionLinks {
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
+    padding: 16px;
+    margin: 8px 0;
+  }
+
+  & .tc {
+    margin-top: 16px;
+    padding: 0 16px;
+    text-align: justify;
+  }
+
+  & a:focus,
+  a:hover {
+    color: #00ac78 !important;
+    transition: ease-in-out 0.3s;
+  }
+}
 .link {
   font-size: 16px;
   color: #0169b2;
