--- a/pages/auth/login.module.scss
+++ b/pages/auth/login.module.scss
@@ -14,6 +14,9 @@
   border-radius: 8px;
   background-color: white;
   padding: 32px 8px;
+  margin: 0 auto;
+  margin-top: 115px;
+  margin-bottom: 30px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
   & .close {
