--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -679,7 +679,7 @@
   background: linear-gradient(#4aa5be, #aadfec);
 }
 .lotto-owl-slider .slide {
-  width: 310px; /*margin-right: 15px;*/
+  width: 90%;
   margin: 0px 0px 0px 20px;
   padding: 0;
   overflow: hidden;
@@ -837,7 +837,9 @@ a.button.goOn:hover {
   margin: 0;
   min-height: 35px;
   text-align: center;
-  float: left;
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
 .footer_part2 {
   float: left;
