--- a/public/styles/owl.theme.default.css
+++ b/public/styles/owl.theme.default.css
@@ -21,7 +21,11 @@
   cursor: pointer;
   border-radius: 3px;
 }
-
+.owl-theme .owl-nav [class*="owl-"]:hover {
+  background: #869791;
+  color: #fff;
+  text-decoration: none;
+}
 .owl-theme .owl-nav .disabled {
   opacity: 0.5;
   cursor: default;
