--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -1,14 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-.slider_content {
-  top: 270px;
-  width: 1000px;
-  margin: 0 auto;
-  position: relative;
-}
+
 @media screen and (max-width: 640px) {
   .slider_content {
-    top: 0px !important;
-    width: 100% !important;
+    display: none;
   }
 }
 .l-stageTemplate-banner.MegaMillions {
@@ -640,7 +634,6 @@
 
 .owl-carousel {
   width: 100%;
-  margin-top: -65px;
 }
 .slide.MegaMillions.track {
   background: linear-gradient(#333796, #cf8486);
