--- a/pages/styles.scss
+++ b/pages/styles.scss
@@ -2315,130 +2315,131 @@ a.playNowBtn {
 }
 
 // group game
-#groupdata {
-  & .group-option-section {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    width: 100%;
+.group-option-section {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  width: 100%;
 
-    & .choose-option {
-      & .draw-option {
-        margin: 16px;
-        display: flex;
-        align-items: center;
+  & .choose-option {
+    & .draw-option {
+      margin: 16px;
+      display: flex;
+      align-items: center;
 
-        & .group_totaldraw {
-          background: #090d14;
-          color: rgba(255, 255, 255, 0.6);
-          display: inline-flex !important;
-          height: 30px;
-          line-height: 29px;
-          vertical-align: middle;
-          -webkit-appearance: none;
-          font-size: 12px;
-          padding: 0 10px;
-          box-sizing: border-box;
-          border: 1px solid #d3d0d0 !important;
-          border-radius: 4px;
-          margin-left: 24px;
-        }
-      }
-    }
-
-    & .total-sum {
-      font-family: Muller;
-      font-size: 14px;
-      color: #e1e1e1;
-      margin-left: 16px;
-      border: 1px solid #d3d0d0;
-      border-radius: 4px;
-      padding: 16px 24px;
-
-      & .total {
-        margin: 16px 0;
-      }
-
-      & .discount {
-        display: flex;
-        justify-content: space-between;
-        margin-top: 4px;
-      }
-
-      & .total {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-
-        & .total-price {
-          color: #13d19c;
-          font-family: "MullerExtraBold";
-          font-size: 28px;
-        }
-      }
-
-      & > a {
-        text-align: center;
+      & .group_totaldraw {
+        background: #090d14;
+        color: rgba(255, 255, 255, 0.6);
+        display: inline-flex !important;
+        height: 30px;
+        line-height: 29px;
+        vertical-align: middle;
+        -webkit-appearance: none;
+        font-size: 12px;
+        padding: 0 10px;
+        box-sizing: border-box;
+        border: 1px solid #d3d0d0 !important;
+        border-radius: 4px;
+        margin-left: 24px;
       }
     }
   }
 
-  & button.link-button {
-    background-color: transparent !important;
-    border: none !important;
-    color: $color-primary !important;
-    text-align: center !important;
-    font-weight: 500;
-    font-size: 18px;
-    text-decoration: underline;
-    &:hover {
-      color: $color-primary-hover !important;
+  & .total-sum {
+    font-family: Muller;
+    font-size: 14px;
+    color: #e1e1e1;
+    margin-left: 16px;
+    border: 1px solid #d3d0d0;
+    border-radius: 4px;
+    padding: 16px 24px;
+
+    & .total {
+      margin: 16px 0;
+    }
+
+    & .discount {
+      display: flex;
+      justify-content: space-between;
+      margin-top: 4px;
+    }
+
+    & .total {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+
+      & .total-price {
+        color: #13d19c;
+        font-family: "MullerExtraBold";
+        font-size: 28px;
+      }
+    }
+
+    & > a {
+      text-align: center;
     }
   }
+}
+button.link-button {
+  background-color: transparent !important;
+  border: none !important;
+  color: $color-primary !important;
+  text-align: center !important;
+  font-weight: 500;
+  font-size: 18px;
+  text-decoration: underline;
+  &:hover {
+    color: $color-primary-hover !important;
+  }
+}
 
-  & button.qtyminus,
-  & button.qtyplus {
-    background-color: transparent;
+button.qtyminus,
+button.qtyplus {
+  background-color: transparent;
+  border: none;
+}
+
+.group-lines {
+  transition: all 0.5s;
+  padding: 0 20px;
+  width: 100%;
+  height: 0;
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  & .lines-box {
+    overflow-y: hidden;
+    overflow-x: auto;
     border: none;
+    border-radius: 4px;
+    height: 100%;
+    display: flex;
+
+    & .ten-lines-box {
+      display: inline-flex;
+      flex-direction: column;
+      padding: 16px;
+
+      & ul {
+        display: flex;
+      }
+    }
   }
 
-  & .group-lines {
-    transition: all 0.5s;
-    padding: 0 20px;
-    width: 100%;
-    height: 0;
-    margin-bottom: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  &.active {
+    height: 400px;
 
     & .lines-box {
-      overflow-y: hidden;
-      overflow-x: auto;
-      border: none;
-      border-radius: 4px;
-      height: 100%;
-      display: flex;
-
-      & .ten-lines-box {
-        display: inline-flex;
-        flex-direction: column;
-        padding: 16px;
-
-        & ul {
-          display: flex;
-        }
-      }
-    }
-
-    &.active {
-      height: 400px;
-
-      & .lines-box {
-        border: 1px solid $color-white;
-      }
+      border: 1px solid $color-white;
     }
   }
+}
+
+.result_ellipse_blue:hover {
+  cursor: pointer;
 }
 
 // terms page
